# common

./: CMakeLists.txt  README.md  RELEASING.md  pyproject.toml
.github/workflows/: publish.yml
.old/examples/: pydataobject_roundtrip.py  pyobject_pydantic.py
.old/src_cpp/pymergetic/common/: __cpp__.cpp
.old/src_cpp/pymergetic/common/base/: __init__.cpp
.old/src_cpp/pymergetic/common/codec/: __init__.cpp
.old/src_cpp/pymergetic/common/exceptions/: __init__.cpp  __init__.hpp
.old/src_cpp/pymergetic/common/header/: __init__.cpp  __init__.hpp
.old/src_cpp/pymergetic/common/nb/: __init__.cpp  __init__.hpp  asyncio_bridge.hpp  data.hpp
.old/src_cpp/pymergetic/common/net/: __init__.cpp  __init__.hpp  pmdg_channel.hpp  stream.hpp  tcp.hpp  uds.hpp
.old/src_cpp/pymergetic/common/objects/: __init__.cpp  __init__.hpp
.old/src_cpp/pymergetic/common/runtime/: __init__.cpp
.old/src_cpp/pymergetic/common/session/: __init__.cpp
.old/src_cpp/pymergetic/common/test/: __init__.cpp
.old/src_py/pymergetic/common/codec/: __init__.py
.old/src_py/pymergetic/common/exceptions/: __init__.py
.old/src_py/pymergetic/common/net/: __init__.py  peer_info.py
.old/src_py/pymergetic/common/session/: __init__.py
.old/src_py/pymergetic/common/test/: __init__.py
.old/tests/: test_asyncio_bridge.py  test_codec_python_mirror.py  test_cpp_extension.py  test_header_resolution.py  test_pydataobject.py  test_pyobject.py
.old/tests/fixtures/hdrpkg/: __header__.py
cmake/: pymergetic_commonConfig.cmake.in
examples/: pydataobject_roundtrip.py  pyobject_pydantic.py
src/bindings/: test_module.cpp
src/include/pymergetic/common/: asio_runtime.hpp  codec.hpp  data.hpp  defs.hpp
src/include/pymergetic/nb/: data.hpp
src/pymergetic/common/: __init__.py  pydantic.py  pydataobject.py  pyobject.py
src/pymergetic/common/header/: exceptions.py  resolve.py
src_bind/pymergetic/common/_internal/: module.cpp
src_bind/pymergetic/common/base/: bind.cpp
src_bind/pymergetic/common/codec/: bind.cpp
src_bind/pymergetic/common/exceptions/: bind.cpp
src_bind/pymergetic/common/header/: bind.cpp
src_bind/pymergetic/common/nb/: bind.cpp
src_bind/pymergetic/common/net/: bind.cpp
src_bind/pymergetic/common/objects/: bind.cpp
src_bind/pymergetic/common/runtime/: bind.cpp
src_bind/pymergetic/common/session/: bind.cpp
src_bind/pymergetic/common/test/: module.cpp
src_cpp/pymergetic/common/: __cpp__.cpp
src_cpp/pymergetic/common/base/: __init__.hpp  base.hpp
src_cpp/pymergetic/common/codec/: __init__.hpp
src_cpp/pymergetic/common/nb/: base.hpp
src_cpp/pymergetic/common/net/: __init__.hpp  acceptor.hpp  peer_info.hpp
src_cpp/pymergetic/common/runtime/: __init__.hpp
src_cpp/pymergetic/common/session/: __init__.hpp  session.hpp
src_cpp/pymergetic/common/sysinfo/: __cpp__.cpp
src_cpp/pymergetic/common/test/: __init__.hpp
src_py/pymergetic/: __init__.py
src_py/pymergetic/common/: __init__.py  __project__.py
src_py/pymergetic/common/devtools/: __init__.py  pin_pyproject.py  pin_specs.py  pins_config.py  project_paths.py  release_helpers.py  release_tag.py  repair_wheel.py  wait_pypi.py
src_py/pymergetic/common/exceptions/: __init__.py
src_py/pymergetic/common/header/: __init__.py  decorators.py  types.py
src_py/pymergetic/common/net/: __init__.py  peer_info.py
src_py/pymergetic/common/objects/: __init__.py  pydataobject.py
src_py/pymergetic/common/session/: __init__.py
src_py/pymergetic/common/sysinfo/: __init__.py
tests/: test_asyncio_bridge.py  test_codec_python_mirror.py  test_cpp_extension.py  test_net_pmdg_channel.py  test_pydantic_cppmodel.py  test_pydataobject.py  test_pyobject.py  test_session_policy.py
tests/fixtures/hdrpkg/: __impl__.py  __init__.py
