[build-system]
requires = ["scikit-build-core>=0.10", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "pymergetic-common"
dynamic = ["version"]
description = "Shared dependency groups + foundational utilities for PymergeticOS"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "PymergeticOS Maintainers", email = "maintainers@example.com" }
]
keywords = ["pymergetic", "common", "deps", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
]

# Base installs include the config stack.
dependencies = [
  "pymergetic-common[config]",
]

[project.optional-dependencies]
console = [
  "fire>=0.7.1",
  "rich>=13.0.0",
]
config = [
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pyyaml>=6.0",
]
objects = [
  "pyzmq>=25.0.0",
]
pki = [
  "cryptography>=41.0.0",
  "textual>=0.40.0",
]
builder = [
  "pyinstaller>=6.0.0",
]

all = [
  "pymergetic-common[console,config,objects,pki,builder]",
]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pymergetic-common[all]",
]

[tool.scikit-build]
cmake.version = ">=3.25"
logging.level = "INFO"
wheel.packages = ["src_py/pymergetic"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"
root = "."
relative_to = "pyproject.toml"


