[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pymergetic-common"
dynamic = ["version"]
description = "Shared dependency groups + foundational utilities for PymergeticOS"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "PymergeticOS Maintainers", email = "maintainers@example.com" }
]
keywords = ["pymergetic", "common", "deps", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
]

# Base installs include the config stack.
dependencies = [
  "pymergetic-common[config]",
]

[project.optional-dependencies]
console = [
  "fire>=0.7.1",
  "rich>=13.0.0",
  "textual>=0.40.0",
]
config = [
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pyyaml>=6.0",
]
objects = [
  "pyzmq>=25.0.0",
]
pki = [
  "cryptography>=41.0.0",
]
builder = [
  "pyinstaller>=6.0.0",
]

# --- easybind SDK (central pins) ---
# Bump nanobind / pymergetic-easybind here first, then sync downstream CI pins.
nanobind = [
  "nanobind~=2.12.0",
]
# Build stack only — use for pymergetic-easybind itself (no pymergetic-easybind pin).
bind = [
  "pymergetic-common[nanobind]",
  "scikit-build-core>=0.10",
  "setuptools>=68",
  "setuptools-scm>=8",
]
easybind = [
  "pymergetic-common[bind]",
  "pymergetic-easybind~=0.2.15",
]

test = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]
release = [
  "build>=1.0.0",
  "twine>=5.0.0",
]

all = [
  "pymergetic-common[console,config,objects,pki,builder,easybind,test,release]",
]
dev = [
  "pymergetic-common[all]",
]

[project.urls]
Homepage = "https://github.com/pymergetic/common"
Repository = "https://github.com/pymergetic/common"
Issues = "https://github.com/pymergetic/common/issues"

[project.scripts]
pymergetic-pin-pyproject = "pymergetic.common.devtools.pin_pyproject:main"
pymergetic-release-tag = "pymergetic.common.devtools.release_tag:main"
pymergetic-wait-pypi = "pymergetic.common.devtools.wait_pypi:main"

[tool.setuptools.packages.find]
where = ["src_py"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"
